С Богом! часть два

--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -3,6 +3,9 @@
   font-size: 18px;
   line-height: 1.22;
   text-align: center;
+  color: #FFFFFF;
+  font-style: normal;
+  font-weight: normal;
   margin: 0 auto 245px;
 }
 
