--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -3,6 +3,8 @@
   font-size: 30px;
   line-height: 1.2;
   text-align: center;
+  font-style: normal;
+  font-weight: normal;
   margin: 0 auto 64px;
 }
 
