--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,9 +1,11 @@
 .cover__title {
   max-width: 560px;
+  font-style: normal;
   font-weight: 900;
   font-size: 72px;
   line-height: 1.06;
   text-align: center;
+  color: #FFFFFF;
   margin: 245px auto 32px;
 }
 
