--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -4,26 +4,26 @@
   line-height: 1.14;
   text-align: right;
   margin: 94px 0 24px;
+  font-style: normal;
+  font-weight: normal;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
-   .footer__copyright {
+  .footer__copyright {
     margin-right: 48px;
   }
-  }
+}
 
-  @media screen and (min-width: 768px) and (max-width: 1023px) {
-    .footer__copyright {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .footer__copyright {
     margin: 90px 0 24px;
   }
-  }
+}
 
-  @media screen and (min-width: 320px) and (max-width: 767px) {
-    .footer__copyright {
-    min-width: 186px;
-    font-size: 14px;
-    line-height: 1.14;
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .footer__copyright {
+    line-height: 1.0;
     text-align: left;
-    margin: 48px 0 24px;
+    margin: 0 118px 24px 16px;
   }
-  }
+}
