--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -3,11 +3,14 @@
   line-height: 1.12;
   margin-right: 18px;
   text-decoration: none;
+  color: #FFFFFF;
+  font-style: normal;
+  font-weight: normal;
 }
 
-.footer__link:last-of-type {
+/* .footer__link:last-of-type {
   margin: 0;
-}
+} */
 
 .footer__link:hover {
   opacity: 0.8;
@@ -15,8 +18,8 @@
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .footer__link {
-    font-size: 16px;
-    line-height: 1.12;
+    font-size: 24px;
+    line-height: 1.0;
     margin: 0 0 32px 0;
   }
 }
