--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,11 +1,13 @@
 .footer {
   max-width: 1184px;
+  display: flex;
+  justify-content: space-between;
   margin: 0 auto;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .footer {
-    max-width: 1184px;
+    max-width: 928px;
   }
 }
 
@@ -17,7 +19,8 @@
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .footer {
-    max-width: 186px;
-    margin: 64px 118px 24px 16px;
+    max-width: 320px;
+    flex-direction: column;
+    justify-content: start;
   }
 }
