--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,6 +3,9 @@
   font-size: 24px;
   line-height: 1.17;
   text-decoration-line: underline;
+  color: #FFFFFF;
+  font-style: normal;
+  font-weight: normal;
   margin-right: 18px;
 }
 
@@ -11,11 +14,14 @@
   margin: 0;
 }
 
+.header__lang-link:hover {
+  opacity: 0.8;
+}
+
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .header__lang-link {
     max-width: 22px;
     font-size: 18px;
     line-height: 1.33;
-    margin-right: 18px;
   }
 }
