--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,6 +1,7 @@
 .intro__list {
   max-width: 690px;
   list-style: none;
+  font-style: normal;
   font-weight: bold;
   font-size: 12px;
   line-height: 1.5;
