--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -2,5 +2,19 @@
   max-width: 690px;
   font-size: 16px;
   line-height: 1.62;
-  margin-bottom: 32px;
+  font-style: normal;
+  font-weight: normal;
+  margin: 0 0 32px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .intro__text {
+    max-width: 720px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .intro__text {
+    max-width: 100%;
+  }
 }
