--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,23 +1,22 @@
 .intro__title {
   max-width: 690px;
+  font-style: normal;
   font-weight: 900;
   font-size: 54px;
   line-height: 1.07;
   color: #FFFFFF;
-  margin: 92px 0 40px;
+  margin: 0 0 40px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .intro__title {
-    max-width: 100%;
-    margin: 88px 0 40px;
+    max-width: 720px;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .intro__title {
-    max-width: 100%;
-    margin: 64px 0 40px;
+    max-width: 288px;
     font-size: 32px;
     line-height: 1.09;
   }
