--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,16 +1,27 @@
 .intro {
   max-width: 984px;
-  margin: 0 auto;
+  margin: 92px auto 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .intro {
+    max-width: 928px;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .intro {
     max-width: 720px;
+    margin: 88px auto 0;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .intro {
     max-width: 288px;
+    margin: 64px auto 0;
   }
 }
