--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -3,9 +3,20 @@
   margin: 0 auto;
 }
 
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .lead {
+    max-width: 928px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .lead {
+    max-width: 768px;
+  }
+}
+
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .lead {
     max-width: 320px;
-    margin: 0 auto;
   }
 }
