--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,21 +1,5 @@
 .page {
   background: #2A2C2F;
-}
-
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .page {
-    max-width: 1024px;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-  .page {
-    max-width: 768px;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .page {
-    max-width: 320px;
-  }
+  color: #FFFFFF;
+  min-width: 320px;
 }
