--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,9 +1,9 @@
 .place__url-heading {
   max-width: 456px;
   font-size: 12px;
-  line-height: 1.0;
+  line-height: 1.7;
   letter-spacing: 0.2em;
   color: #AAAAAA;
+  text-transform: uppercase;
   margin: 0 0 12px;
-  padding: 0;
 }
