--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -4,6 +4,10 @@
   overflow: hidden;
   text-decoration: none;
   background-color: rgba(42, 44, 47, 0.3);
+  transition-duration: 0.2s;
+  position: relative;
+  z-index: 1;
+
 }
 
 .cover__overlay:hover {
