--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,8 +1,9 @@
 .cover {
   max-width: 1184px;
   margin: 92px auto 0;
-  background-image: url(../../../images/cover__background.jpg);
+  background-image: url(../../images/cover__background.jpg);
   background-size: cover;
+  transition-duration: 0.2s;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
