--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -6,12 +6,7 @@
   margin: 94px 0 24px;
   font-style: normal;
   font-weight: normal;
-}
-
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .footer__copyright {
-    margin-right: 48px;
-  }
+  transition-duration: 0.2s;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
