--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,16 +1,12 @@
 .footer__link {
   font-size: 16px;
   line-height: 1.12;
-  margin-right: 18px;
   text-decoration: none;
   color: #FFFFFF;
   font-style: normal;
   font-weight: normal;
+  transition-duration: 0.2s;
 }
-
-/* .footer__link:last-of-type {
-  margin: 0;
-} */
 
 .footer__link:hover {
   opacity: 0.8;
@@ -20,6 +16,5 @@
   .footer__link {
     font-size: 24px;
     line-height: 1.0;
-    margin: 0 0 32px 0;
   }
 }
