--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,15 +1,9 @@
 .footer__links {
   display: flex;
-  justify-content: space-around;
   list-style-type: none;
   margin: 92px 0 24px;
   padding: 0;
-}
-
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .footer__links {
-    margin-left: 48px;
-  }
+  transition-duration: 0.2s;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
