--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
+  transition-duration: 0.2s;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
