--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -7,6 +7,7 @@
   font-style: normal;
   font-weight: normal;
   margin-right: 18px;
+  transition-duration: 0.2s;
 }
 
 .header__lang-link:last-of-type {
