--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,9 +1,9 @@
 .header__lang-links {
   display: flex;
-  align-items: flex-end;
   list-style: none;
   margin-top: 46px;
   padding: 0;
+  transition-duration: 0.2s;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
