--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,6 +1,7 @@
 .header__logo {
   max-width: 176px;
   margin-top: 28px;
+  transition-duration: 0.2s;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
