--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -7,6 +7,7 @@
   line-height: 1.5;
   margin: 0;
   padding: 0;
+  transition-duration: 0.2s;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
