--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -6,6 +6,7 @@
   line-height: 1.07;
   color: #FFFFFF;
   margin: 0 0 40px;
+  transition-duration: 0.2s;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
