--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: start;
+  transition-duration: 0.2s;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
