--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,6 +5,7 @@
   letter-spacing: 0.15em;
   text-transform: uppercase;
   margin: 8px 0 0;
+  transition-duration: 0.2s;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
