--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,5 +1,6 @@
 .lead__image {
   max-width: 984px;
+  transition-duration: 0.2s;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
