--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -6,6 +6,7 @@
   font-style: normal;
   font-weight: normal;
   margin: 0 auto 64px;
+  transition-duration: 0.2s;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
