--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,5 +1,6 @@
 .photo-grid__item {
   max-width: 284px;
+  transition-duration: 0.2s;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
