--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -5,6 +5,7 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 16px;
   margin: 92px auto 0;
+  transition-duration: 0.2s;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
