--- a/blocks/place/__down/place__down.css
+++ b/blocks/place/__down/place__down.css
@@ -1,6 +1,7 @@
 .place__down {
   display: flex;
   justify-content: space-between;
+  transition-duration: 0.2s;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
