--- a/blocks/place/__up/place__up.css
+++ b/blocks/place/__up/place__up.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: flex-end;
   margin-bottom: 48px;
+  transition-duration: 0.2s;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
