--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   margin-top: 80px;
+  transition-duration: 0.2s;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
