--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,6 +1,7 @@
 .places {
   max-width: 984px;
   margin: 92px auto 0;
+  transition-duration: 0.2s;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
