--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,7 +1,6 @@
 .cover__subtitle {
-  max-width: 360px;
-  font-size: 18px;
-  line-height: 1.22;
+  max-width: 80%;
+  font-size: 25px;
   text-align: center;
   color: #FFFFFF;
   font-style: normal;
@@ -24,7 +23,6 @@
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .cover__subtitle {
-    max-width: 272px;
     font-size: 14px;
     line-height: 1.14;
     margin: 0 auto 33px;
