--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,9 +1,8 @@
 .cover__title {
-  max-width: 560px;
+  max-width: 100%;
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
-  line-height: 1.06;
   text-align: center;
   color: #FFFFFF;
   margin: 245px auto 32px;
@@ -24,9 +23,7 @@
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .cover__title {
-    max-width: 288px;
     font-size: 32px;
-    line-height: 1.09;
     margin: 33px auto 16px;
   }
 }
