--- a/blocks/header/__subtitle/header__subtitle.css
+++ b/blocks/header/__subtitle/header__subtitle.css
@@ -1,8 +1,8 @@
-.header__lang-links {
-  display: flex;
-  list-style: none;
-  margin-top: 46px;
-  padding: 0;
+.header__subtitle {
+  font-size: 70px;
+  color: #fff;
+  text-align: center;
+  margin-top: 50px;
   transition-duration: 0.2s;
 }
 
