--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,16 +1,4 @@
 .lead__image {
-  max-width: 984px;
-  transition-duration: 0.2s;
-}
-
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-  .lead__image {
-    max-width: 768px;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .lead__image {
-    max-width: 320px;
-  }
+  max-width: 100%;
+  margin: 0 140px
 }
