--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,10 +1,10 @@
 .lead__subtitle {
-  max-width: 640px;
-  font-size: 30px;
+  max-width: 7200px;
+  font-size: 40px;
   line-height: 1.2;
   text-align: center;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 900;
   margin: 0 auto 64px;
   transition-duration: 0.2s;
 }
