--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,8 +1,8 @@
 .lead__title {
   max-width: 720px;
   font-style: normal;
-  font-weight: 900;
-  font-size: 96px;
+  font-weight: normal;
+  font-size: 30px;
   line-height: 1.04;
   text-align: center;
   margin: 56px auto 32px;
