--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,32 +1,22 @@
 .place__title {
-  width: 460px;
+  width: 100%;
   font-style: normal;
   font-weight: 900;
-  font-size: 72px;
-  line-height: 1.06;
+  font-size: 52px;
   margin: 0;
   transition-duration: 0.2s;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .place__title {
-    width: 440px;
-  }
-}
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .place__title {
-    width: 340px;
     font-size: 42px;
-    line-height: 1.1;
   }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .place__title {
-    max-width: 288px;
     font-size: 32px;
-    line-height: 1.09;
     margin-right: auto;
     margin-left: auto;
   }
