--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -2,12 +2,13 @@
   max-width: 30px;
   font-size: 24px;
   line-height: 1.17;
-  text-decoration-line: underline;
-  color: #FFFFFF;
-  font-style: normal;
-  font-weight: normal;
-  margin-right: 18px;
-  transition-duration: 0.2s;
+  color: #828282;
+
+  background-image: linear-gradient(currentColor, currentColor);
+  background-position: 0% 100%;
+  background-repeat: no-repeat;
+  background-size: 0% 2px;
+  transition: color .2s, background-size .3s;
 }
 
 .header__lang-link:last-of-type {
@@ -16,7 +17,8 @@
 }
 
 .header__lang-link:hover {
-  opacity: 0.8;
+  color: #070707;
+  background-size: 100% 2px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
